fixed styling for cards and header and gave spacing between nav and main tags

--- a/src/style.css
+++ b/src/style.css
@@ -19,13 +19,23 @@ body {
 aside {
   background-color: var(--mid-grey);
   height: 100vh;
+  grid-row: 1 / 3;
 }
 
 .page-wrapper {
   display: grid;
   grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr 8fr;
 }
 
+header {
+  grid-column: 2 / 3;
+}
+
+main {
+  grid-column: 2 / 3;
+  margin-left: 35px;
+}
 .card {
   display: grid;
   width: 300px;
